// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render FilterList component render with props 1`] = `
<nav
  className="filterList"
>
  <button
    type="button"
  >
    Button 1
  </button>
  <button
    type="button"
  >
    Button 2
  </button>
  <button
    type="button"
  >
    Button 3
  </button>
  <button
    type="button"
  >
    Button 4
  </button>
</nav>
`;

exports[`render FilterList component render without props 1`] = `
<nav
  className="filterList"
>
  <button
    type="button"
  >
    Button
  </button>
  <button
    type="button"
  >
    Button
  </button>
</nav>
`;
